deploy/k8s/overlays/prod/patches/replicas-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-api
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: results-api
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
